<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_privacy_policy_text" formatted="false"><![CDATA[Privacy Policy for the Pixel wanker for Android dev / PixelWanker App (hereinafter — the Mobile App)\n
\n
=====\nBrief General Provisions:\n =====\n
\n
1. Collection, processing, and use of data.\n
\n
The Right Holder does not collect and does not receive users’ personal data on its servers and does not perform remote tracking.\n
...
